# Minecraft-Clone

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
assets/shaders/: shader.frag  simple.frag  simple.vert
assets/textures/block/: limestone.qoi
include/: renderObject.h  shader.h  shaderProgram.h  texture.h
lib/DearImGui/: CMakeLists.txt
lib/stb/: CMakeLists.txt  generate_impl.cpp.in
src/: ebo.cpp  renderObject.cpp  shader.cpp  shaderProgram.cpp  texture2d.cpp  vao.cpp  vbo.cpp
